layer.conf: Remove 'meta-yocto' dependency
The layer ought to be distro agnistic and work with OE-Core, Poky,
commercial distros as O.S. Systems Embedded Linux and others without
requiring the 'meta-yocto' layer to be available.

Change-Id: I5e12db1e3423fe9b611d5a75db6af5bc8516d9ef
Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,4 +11,4 @@ BBFILE_COLLECTIONS += "armada38x"
 BBFILE_PATTERN_armada38x = "^${LAYERDIR}/"
 BBFILE_PRIORITY_armada38x = "7"
 
-LAYERDEPENDS_armada38x = "core yocto openembedded-layer networking-layer filesystems-layer"
+LAYERDEPENDS_armada38x = "core openembedded-layer networking-layer filesystems-layer"
