layer.conf: Rename collection to 'marvell-layer'
The layer will offer BSP support for different SoC so the collection
it provides must be SoC agnostic. Instead, we opted to use the vendor
for the name.

Change-Id: Id50a8d32c8263c7e129d9ec05c5a5f74b8e0d278
Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,8 +7,8 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/classes/*.bbclass \
 "
 
-BBFILE_COLLECTIONS += "armada38x"
-BBFILE_PATTERN_armada38x = "^${LAYERDIR}/"
-BBFILE_PRIORITY_armada38x = "7"
+BBFILE_COLLECTIONS += "marvell-layer"
+BBFILE_PATTERN_marvell-layer = "^${LAYERDIR}/"
+BBFILE_PRIORITY_marvell-layer = "7"
 
-LAYERDEPENDS_armada38x = "core openembedded-layer networking-layer filesystems-layer"
+LAYERDEPENDS_marvell-layer = "core openembedded-layer networking-layer filesystems-layer"
