conf/layer.conf: Reduce the layer dependency
The layer now provides just the BSP bits so its dependencies can be
greatly reduced. It now just requires OE-Core (or another compatible
distribution) to work.

Change-Id: I73ccdfb6a17eac23087159f25885dbb11921daef
Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,4 +11,4 @@ BBFILE_COLLECTIONS += "marvell-layer"
 BBFILE_PATTERN_marvell-layer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_marvell-layer = "7"
 
-LAYERDEPENDS_marvell-layer = "core openembedded-layer networking-layer filesystems-layer"
+LAYERDEPENDS_marvell-layer = "core openembedded-layer"
