--- a/conf/machine/clearfog.conf
+++ b/conf/machine/clearfog.conf
@@ -1,13 +1,13 @@
 #@TYPE: Machine
-#@NAME: clearfog
+#@NAME: SolidRun ClearFog
+#@SOC: Armada 38x
+#@DESCRIPTION: Machine configuration for SolidRun ClearFog
 
-#@DESCRIPTION: Machine configuration for Solidrun Clearfog
-
-MACHINEOVERRIDES =. "clearfog:"
-
-require conf/machine/include/meta-armada38x.inc
+require conf/machine/include/armada38x-base.inc
 
 KERNEL_DEVICETREE = "armada-388-customer1.dtb"
 
 UBOOT_MARVELL_MACHINE = "armada_38x_clearfog"
 UBOOT_SUFFIX = "mmc"
+
+MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
