--- a/conf/machine/clearfog.conf
+++ b/conf/machine/clearfog.conf
@@ -11,3 +11,5 @@ UBOOT_MARVELL_MACHINE = "armada_38x_clearfog"
 UBOOT_SUFFIX = "mmc"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
+
+IMAGE_BOOT_FILES = "zImage zImage-armada-388-customer1.dtb;armada-388-customer1.dtb boot.scr"
