--- a/conf/machine/db-88f6820-gp.conf
+++ b/conf/machine/db-88f6820-gp.conf
@@ -10,3 +10,5 @@ KERNEL_DEVICETREE = "armada-388-db-gp.dtb"
 UBOOT_MARVELL_MACHINE = "armada_38x"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
+
+IMAGE_BOOT_FILES = "zImage zImage-armada-388-db-gp.dtb;armada-388-db-gp.dtb boot.scr"
