--- a/conf/machine/clearfog.conf
+++ b/conf/machine/clearfog.conf
@@ -5,11 +5,11 @@
 
 require conf/machine/include/armada38x-base.inc
 
-KERNEL_DEVICETREE = "armada-388-customer1.dtb"
+KERNEL_DEVICETREE = "armada-388-clearfog.dtb"
 
 UBOOT_MARVELL_MACHINE = "armada_38x_clearfog"
 UBOOT_SUFFIX = "mmc"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
 
-IMAGE_BOOT_FILES = "zImage zImage-armada-388-customer1.dtb;armada-388-customer1.dtb boot.scr"
+IMAGE_BOOT_FILES = "zImage zImage-armada-388-clearfog.dtb;armada-388-clearfog.dtb boot.scr"
