db-88f6820-gp: Set kernel device tree name to armada-388-gp.dtb
armada-388-gp.dtb is available on kernel 4.4.8.

Change-Id: I71a01c856b8a434bd1e0fbf5492db8703fcf2c13
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/machine/db-88f6820-gp.conf
+++ b/conf/machine/db-88f6820-gp.conf
@@ -5,7 +5,7 @@
 
 require conf/machine/include/armada38x-base.inc
 
-KERNEL_DEVICETREE = "armada-388-db-gp.dtb"
+KERNEL_DEVICETREE = "armada-388-gp.dtb"
 
 UBOOT_MARVELL_MACHINE = "armada_38x"
 
