db-88f6820-gp: Fix device tree name for IMAGE_BOOT_FILES
As of commit dc5622c70d1b1004ade8a807076f0dd1404afde2, KERNEL_DEVICETREE
was renamed to armada-388-gp.dtb. Change name for IMAGE_BOOT_FILES
match this.

Change-Id: I68147eb941172a68d72262fadf7532a885598cbe
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/machine/db-88f6820-gp.conf
+++ b/conf/machine/db-88f6820-gp.conf
@@ -11,4 +11,4 @@ UBOOT_MARVELL_MACHINE = "armada_38x"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
 
-IMAGE_BOOT_FILES = "zImage zImage-armada-388-db-gp.dtb;armada-388-db-gp.dtb boot.scr"
+IMAGE_BOOT_FILES = "zImage zImage-armada-388-gp.dtb;armada-388-gp.dtb boot.scr"
