clearfog: Use clearfog.wks for WKS_FILES
Change-Id: I2820a8964135efe4a55e925ab3091e8d9cfeddea
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/machine/clearfog.conf
+++ b/conf/machine/clearfog.conf
@@ -13,3 +13,5 @@ UBOOT_SUFFIX = "mmc"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
 
 IMAGE_BOOT_FILES = "zImage zImage-armada-388-clearfog.dtb;armada-388-clearfog.dtb boot.scr"
+
+WKS_FILES = "clearfog.wks"
