--- a/conf/machine/db-88f7040-modular.conf
+++ b/conf/machine/db-88f7040-modular.conf
@@ -9,6 +9,10 @@ PREFERRED_PROVIDER_virtual/kernel ?= "linux-marvell"
 
 KERNEL_DEVICETREE = " \
     marvell/armada-7040-db-A.dtb \
+    marvell/armada-7040-db-B.dtb \
+    marvell/armada-7040-db-C.dtb \
+    marvell/armada-7040-db-D.dtb \
+    marvell/armada-7040-db-E.dtb \
 "
 
 KERNEL_IMAGETYPE = "Image"
