--- a/conf/machine/db-88f8040-modular.conf
+++ b/conf/machine/db-88f8040-modular.conf
@@ -9,6 +9,11 @@ PREFERRED_PROVIDER_virtual/kernel ?= "linux-marvell"
 
 KERNEL_DEVICETREE = " \
     marvell/armada-8040-db-A.dtb \
+    marvell/armada-8040-db-B.dtb \
+    marvell/armada-8040-db-C.dtb \
+    marvell/armada-8040-db-D.dtb \
+    marvell/armada-8040-db-E.dtb \
+    marvell/armada-8040-db-mcbin.dtb \
 "
 
 KERNEL_IMAGETYPE = "Image"
