--- a/conf/machine/db-88f7040-modular.conf
+++ b/conf/machine/db-88f7040-modular.conf
@@ -21,6 +21,7 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
+UBOOT_DEVICE_TREE = "armada-7040-db"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a70x0"
 EDK_PLATFORM = "Armada70x0"
 
