db-88f8040-modular: Set UBOOT_DEVICE_TREE
We need to set DEVICE_TREE variable in U-Boot version 2017.03,
use armada-8040-db for db-88f8040-modular.

Change-Id: I9a72b7fa045ab3f08104a95eada70b84d4631da3
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/machine/db-88f8040-modular.conf
+++ b/conf/machine/db-88f8040-modular.conf
@@ -22,6 +22,7 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
+UBOOT_DEVICE_TREE = "armada-8040-db"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a80x0"
 EDK_PLATFORM = "Armada70x0"
 
