--- a/conf/machine/db-88f3720-ddr3-modular.conf
+++ b/conf/machine/db-88f3720-ddr3-modular.conf
@@ -20,6 +20,7 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_armada3700_defconfig"
+UBOOT_DEVICE_TREE = "armada-3720-db"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a3700"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
