cb-88f8040-mcbin: Set UBOOT_DEVICE_TREE
We need to set DEVICE_TREE variable in U-Boot version 2017.03,
use armada-8040-mcbin for cb-88f8040-mcbin.

Change-Id: I1120af9234647cbe0766700cf1cba714ceaf8d2d
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/machine/cb-88f8040-mcbin.conf
+++ b/conf/machine/cb-88f8040-mcbin.conf
@@ -17,6 +17,7 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_armada80x0_customer0_mcbin_defconfig"
+UBOOT_DEVICE_TREE = "armada-8040-mcbin"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a80x0_cust"
 EDK_PLATFORM = "Armada80x0"
 
