cb-88f3720-ddr3-espressobin: Set UBOOT_DEVICE_TREE
We need to set DEVICE_TREE variable in U-Boot version 2017.03,
use armada-3720-espressobin for cb-88f3720-ddr3-espressobin.

Change-Id: I449cafc5817e50048b88c486c614d47dd2a27b91
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/machine/cb-88f3720-ddr3-espressobin.conf
+++ b/conf/machine/cb-88f3720-ddr3-espressobin.conf
@@ -15,6 +15,7 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_armada3700_espressobin_defconfig"
+UBOOT_DEVICE_TREE = "armada-3720-espressobin"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a3700"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
