edk: move to uefi 17.06 branch
Moving to new branch include the following:
- Update Remove Werror patch
- Add new patch that update the vrf MAX_PATH to avoid compilation error
- Update name of EDK PATFORM for A8040 machines
- Update the path and name of the built images

Change-Id: Ib80f43a82d0dc7efc928f908091fc52f0676b570
Signed-off-by: Neta Zur <neta@marvell.com>

--- a/conf/machine/cb-88f8040-mcbin.conf
+++ b/conf/machine/cb-88f8040-mcbin.conf
@@ -19,7 +19,7 @@ PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
 UBOOT_MACHINE = "mvebu_mcbin-88f8040_defconfig"
 UBOOT_DEVICE_TREE = "armada-8040-mcbin"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a80x0_cust"
-EDK_PLATFORM = "Armada80x0"
+EDK_PLATFORM = "Armada80x0McBin"
 
 #MACHINE_FEATURES += "edk-efi"
 
