--- a/conf/machine/db-88f8040-modular.conf
+++ b/conf/machine/db-88f8040-modular.conf
@@ -24,7 +24,7 @@ PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
 UBOOT_DEVICE_TREE = "armada-8040-db"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a80x0"
-EDK_PLATFORM = "Armada70x0"
+EDK_PLATFORM = "Armada80x0Db"
 
 #MACHINE_FEATURES += "edk-efi"
 
