db-88f7040/8040-modular: update default device tree name
from armada-7040-db-A to armada-7040-db-A

Change-Id: I2171c8074358616ee5c7bd369bddaf3e7e71ebd1
Signed-off-by: Neta Zur <neta@marvell.com>

--- a/conf/machine/db-88f7040-modular.conf
+++ b/conf/machine/db-88f7040-modular.conf
@@ -8,7 +8,7 @@ require conf/machine/include/armada70xx-base.inc
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-marvell"
 
 KERNEL_DEVICETREE = " \
-    marvell/armada-7040-db-A.dtb \
+    marvell/armada-7040-db.dtb \
     marvell/armada-7040-db-B.dtb \
     marvell/armada-7040-db-C.dtb \
     marvell/armada-7040-db-D.dtb \
@@ -30,5 +30,5 @@ EDK_PLATFORM = "Armada70x0"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
 
 IMAGE_BOOT_FILES_append = " \
-    Image-armada-7040-db-A.dtb;fdt.dtb \
+    Image-armada-7040-db.dtb;fdt.dtb \
 "
