--- a/conf/machine/db-88f8040-modular.conf
+++ b/conf/machine/db-88f8040-modular.conf
@@ -8,7 +8,7 @@ require conf/machine/include/armada80xx-base.inc
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-marvell"
 
 KERNEL_DEVICETREE = " \
-    marvell/armada-8040-db-A.dtb \
+    marvell/armada-8040-db.dtb \
     marvell/armada-8040-db-B.dtb \
     marvell/armada-8040-db-C.dtb \
     marvell/armada-8040-db-D.dtb \
@@ -31,5 +31,5 @@ EDK_PLATFORM = "Armada80x0Db"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
 
 IMAGE_BOOT_FILES_append = " \
-    Image-armada-8040-db-A.dtb;fdt.dtb \
+    Image-armada-8040-db.dtb;fdt.dtb \
 "
