Use weak assignment to set PREFERRED_PROVIDER for all machines
We need to use weak assignment to allow use other kernel or u-boot.

Change-Id: I60b6a704ea57044d354fe1a19d118e57782f6f44
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/machine/cb-88f3720-ddr3-espressobin.conf
+++ b/conf/machine/cb-88f3720-ddr3-espressobin.conf
@@ -5,14 +5,14 @@
 
 require conf/machine/include/armada37xx-base.inc
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-marvell"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-marvell"
 
 KERNEL_DEVICETREE = "marvell/armada-3720-community.dtb"
 
 KERNEL_IMAGETYPE = "Image"
 
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
-PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
+PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
+PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_espressobin-88f3720_defconfig"
 UBOOT_DEVICE_TREE = "armada-3720-espressobin"
