--- a/conf/machine/cb-88f8040-mcbin.conf
+++ b/conf/machine/cb-88f8040-mcbin.conf
@@ -13,8 +13,8 @@ KERNEL_DEVICETREE = " \
 
 KERNEL_IMAGETYPE = "Image"
 
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
-PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
+PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
+PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_mcbin-88f8040_defconfig"
 UBOOT_DEVICE_TREE = "armada-8040-mcbin"
