--- a/conf/machine/db-88f7040-modular.conf
+++ b/conf/machine/db-88f7040-modular.conf
@@ -17,8 +17,8 @@ KERNEL_DEVICETREE = " \
 
 KERNEL_IMAGETYPE = "Image"
 
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
-PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
+PREFERRED_PROVIDER_virtual/bootloader ??= "u-boot-marvell"
+PREFERRED_PROVIDER_u-boot ??= "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
 UBOOT_DEVICE_TREE = "armada-7040-db"
