--- a/conf/machine/db-88f7040-pcac.conf
+++ b/conf/machine/db-88f7040-pcac.conf
@@ -13,8 +13,8 @@ KERNEL_DEVICETREE = " \
 
 KERNEL_IMAGETYPE = "Image"
 
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-marvell"
-PREFERRED_PROVIDER_u-boot = "u-boot-marvell"
+PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
+PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a7040_pcac"
