db-88f7040-*: Set "Armada70x0" as a default EDK_PLATFORM
Sets "Armada70x0" as a default EDK_PLATFORM. Set EDK_PLATFORM
variable in conf/local.conf to change this default.

Change-Id: Iec50da11707339fbff5158165bbf8beb7dabb9f0
Signed-off-by: Victor Axelrod <victora@marvell.com>

--- a/conf/machine/db-88f7040-modular.conf
+++ b/conf/machine/db-88f7040-modular.conf
@@ -23,7 +23,7 @@ PREFERRED_PROVIDER_u-boot ??= "u-boot-marvell"
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
 UBOOT_DEVICE_TREE = "armada-7040-db"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a70x0"
-EDK_PLATFORM = "Armada70x0"
+EDK_PLATFORM ?= "Armada70x0"
 
 #MACHINE_FEATURES += "edk-efi"
 
