--- a/conf/machine/db-88f7040-pcac.conf
+++ b/conf/machine/db-88f7040-pcac.conf
@@ -18,7 +18,7 @@ PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
 
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a7040_pcac"
-EDK_PLATFORM = "Armada70x0"
+EDK_PLATFORM ?= "Armada70x0"
 
 #MACHINE_FEATURES += "edk-efi"
 
