--- a/conf/machine/cb-88f3720-ddr3-espressobin.conf
+++ b/conf/machine/cb-88f3720-ddr3-espressobin.conf
@@ -9,8 +9,6 @@ PREFERRED_PROVIDER_virtual/kernel ?= "linux-marvell"
 
 KERNEL_DEVICETREE = "marvell/armada-3720-community.dtb"
 
-KERNEL_IMAGETYPE = "Image"
-
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
 
@@ -19,3 +17,7 @@ UBOOT_DEVICE_TREE = "armada-3720-espressobin"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a3700"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules"
+
+IMAGE_BOOT_FILES_append = " \
+    Image-armada-3720-community.dtb;fdt.dtb \
+"
