Removed old versions of u-boot. Implemented u-boot-fw-utils-marvell.

--- a/conf/machine/cb-88f3720-ddr3-espressobin.conf
+++ b/conf/machine/cb-88f3720-ddr3-espressobin.conf
@@ -12,6 +12,9 @@ KERNEL_DEVICETREE = "marvell/armada-3720-community.dtb"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
 
+PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+PREFERRED_RPROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+
 UBOOT_MACHINE = "mvebu_espressobin-88f3720_defconfig"
 UBOOT_DEVICE_TREE = "armada-3720-espressobin"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a3700"
