--- a/conf/machine/db-88f3720-ddr3-modular.conf
+++ b/conf/machine/db-88f3720-ddr3-modular.conf
@@ -17,6 +17,9 @@ KERNEL_DEVICETREE = " \
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
 
+PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+PREFERRED_RPROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+
 UBOOT_MACHINE = "mvebu_db-88f3720_defconfig"
 UBOOT_DEVICE_TREE = "armada-3720-db"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a3700"
