--- a/conf/machine/db-88f8040-modular.conf
+++ b/conf/machine/db-88f8040-modular.conf
@@ -19,6 +19,9 @@ KERNEL_DEVICETREE = " \
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
 PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
 
+PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+PREFERRED_RPROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
 UBOOT_DEVICE_TREE = "armada-8040-db"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a80x0"
