Fixed issues with compiling the arm-trusted-firmware-marvell for rocko

--- a/conf/machine/db-88f3720-ddr3-modular.conf
+++ b/conf/machine/db-88f3720-ddr3-modular.conf
@@ -15,10 +15,15 @@ KERNEL_DEVICETREE = " \
 "
 
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
+
 PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
+PREFERRED_RPROVIDER_u-boot ?= "u-boot-marvell"
 
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
 PREFERRED_RPROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+
+PREFERRED_PROVIDER_arm-trusted-firmware ?= "arm-trusted-firmware-marvell"
+PREFERRED_RPROVIDER_arm-trusted-firmware ?= "arm-trusted-firmware-marvell"
 
 UBOOT_MACHINE = "mvebu_db-88f3720_defconfig"
 UBOOT_DEVICE_TREE = "armada-3720-db"
