--- a/conf/machine/db-88f7040-pcac.conf
+++ b/conf/machine/db-88f7040-pcac.conf
@@ -12,10 +12,15 @@ KERNEL_DEVICETREE = " \
 "
 
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
+
 PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
+PREFERRED_RPROVIDER_u-boot ?= "u-boot-marvell"
 
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
 PREFERRED_RPROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+
+PREFERRED_PROVIDER_arm-trusted-firmware ?= "arm-trusted-firmware-marvell"
+PREFERRED_RPROVIDER_arm-trusted-firmware ?= "arm-trusted-firmware-marvell"
 
 UBOOT_MACHINE = "mvebu_db_armada8k_defconfig"
 ARM_TRUSTED_FIRMWARE_PLATFORM = "a7040_pcac"
