--- a/conf/machine/cb-88f3720-ddr3-espressobin.conf
+++ b/conf/machine/cb-88f3720-ddr3-espressobin.conf
@@ -10,10 +10,15 @@ PREFERRED_PROVIDER_virtual/kernel ?= "linux-marvell"
 KERNEL_DEVICETREE = "marvell/armada-3720-community.dtb"
 
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
+
 PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
+PREFERRED_RPROVIDER_u-boot ?= "u-boot-marvell"
 
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
 PREFERRED_RPROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+
+PREFERRED_PROVIDER_arm-trusted-firmware ?= "arm-trusted-firmware-marvell"
+PREFERRED_RPROVIDER_arm-trusted-firmware ?= "arm-trusted-firmware-marvell"
 
 UBOOT_MACHINE = "mvebu_espressobin-88f3720_defconfig"
 UBOOT_DEVICE_TREE = "armada-3720-espressobin"
