--- a/conf/machine/cb-88f8040-mcbin.conf
+++ b/conf/machine/cb-88f8040-mcbin.conf
@@ -12,10 +12,15 @@ KERNEL_DEVICETREE = " \
 "
 
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-marvell"
+
 PREFERRED_PROVIDER_u-boot ?= "u-boot-marvell"
+PREFERRED_RPROVIDER_u-boot ?= "u-boot-marvell"
 
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
 PREFERRED_RPROVIDER_u-boot-fw-utils ?= "u-boot-fw-utils-marvell"
+
+PREFERRED_PROVIDER_arm-trusted-firmware ?= "arm-trusted-firmware-marvell"
+PREFERRED_RPROVIDER_arm-trusted-firmware ?= "arm-trusted-firmware-marvell"
 
 UBOOT_MACHINE = "mvebu_mcbin-88f8040_defconfig"
 UBOOT_DEVICE_TREE = "armada-8040-mcbin"
